# AoC

./: .clangd  .gitignore
2025/: CMakeLists.txt
2025/cmake/: Dependencies.cmake
2025/src/: CMakeLists.txt
2025/src/dec_1/: CMakeLists.txt  dec_1.cpp  dec_1.h  main.cpp
2025/src/dec_2/: CMakeLists.txt  dec_2.h  main.cpp
2025/src/dec_3/: CMakeLists.txt  dec_3.h  main.cpp
2025/src/utils/: CMakeLists.txt  config.h  get_input.h  solve_bc.h
2025/test/: CMakeLists.txt
2025/test/dec_1/: test_main.cc
